# POS_semestralka_server

./: CMakeLists.txt  main.c
